--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h2>Hello world</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi necessitatibus exercitationem fugiat quas ipsa esse facilis maxime culpa, qui est temporibus magnam minus cum laborum id blanditiis nisi fugit officiis.</p>
 </body>
 </html>
